# tutina

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.app  README.md  compose.dev.yml  compose.prod.yml  compose.yml  config.yaml  docker-compose.yml
env/: tutina-sample.toml
scripts/: lightsail.sh
traefik/: traefik.yml
tutina-ai/: README.md  pyproject.toml
tutina-ai/tutina/ai/: __main__.py  _cli.py  model.py  types.py
tutina-ai/tutina_ai/: model.py
tutina-app/: README.md  pyproject.toml
tutina-app/tests/: conftest.py  test_auth.py  test_preloaded_dependencies.py  test_types.py
tutina-app/tests/routers/: model-input.json  prediction.json  test_data.py  test_predictions.py
tutina-app/tutina/app/: _app.py  app.py  auth.py  dependencies.py  model_wrapper.py  preloaded_dependencies.py  settings.py
tutina-app/tutina/app/routers/: data.py  predictions.py
tutina-ha/: .dockerignore  Dockerfile  README.md  config.yaml  pyproject.toml  run.sh
tutina-ha/tutina/: __main__.py  db.py  forecasts.py  measurements.py  settings.py
tutina-ha/tutina/ha/: __main__.py  _cli.py  forecasts.py  measurements.py  settings.py
tutina-lib/: README.md  pyproject.toml
tutina-lib/alembic/: env.py
tutina-lib/alembic/versions/: 546475644507_initial_revision.py
tutina-lib/tutina/lib/: _cli.py  client.py  data.py  db.py  logging.py  models.py  settings.py  types.py  util.py
tutina-lib/tutina_lib/: db.py
