[tool.poetry]
name = "tutina-ai"
version = "0.1.0"
description = "Machine learning model for predicting and controlling indoor temperature"
authors = ["Jaakko Moisio <jaakko@moisio.fi>"]
readme = "README.md"
packages = [{ include = "tutina" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
more-itertools = "^10.4.0"
tensorflow = "^2.17.0"
tutina-lib = { path="../tutina-lib", develop=true }
dict-deep = "^4.1.2"
typer = "^0.15.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
mypy = "^1.13.0"
pandas-stubs = "^2.2.2.240807"
ipython = "^8.26.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
