[project]
name = "tutina-ai"
version = "0.1.0"
description = "Machine learning model for predicting and controlling indoor temperature"
authors = [
  { name = "Jaakko Moisio", email = "jaakko@moisio.fi" }
]
readme = "README.md"

[project.scripts]
tutina = "tutina.lib._cli:app"

[tool.poetry]
packages = [{ include = "tutina" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
more-itertools = "^10.4.0"
tensorflow = "^2.17.0"
tutina-lib = { path="../tutina-lib", develop=true }
typer = "^0.15.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
mypy = "^1.13.0"
pandas-stubs = "^2.2.2.240807"
ipython = "^8.26.0"
seaborn = "^0.13.2"

[project.entry-points.tutina_cli]
ai = "tutina.ai._cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
