[tool.poetry]
name = "tutina-app"
version = "0.1.0"
description = "Web application serving predictions using the Tutina AI model"
authors = ["Jaakko Moisio <jaakko@moisio.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.3"
tutina-lib = { path="../tutina-lib", develop=true }
tutina-ai = { path="../tutina-ai", develop=true }


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
