[tool.poetry]
name = "tutina"
version = "0.4.1"
description = "Home Assistant addon for predicting and controlling indoor temperature"
authors = ["Jaakko Moisio <jaakko@moisio.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1"
homeassistant-api = "^4.2"
pydantic = {version = "^2.8", extras = ["dotenv"]}
schedule = "^1.2"
requests = "^2.32.3"
pydantic-settings = "^2.5.2"
tutina-lib = { path="../tutina-lib", develop=true }


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
