[tool.poetry]
name = "tutina-lib"
version = "0.1.0"
description = "Common libraries for the tutina project"
authors = ["Jaakko Moisio <jaakko@moisio.fi>"]
readme = "README.md"
packages = [{ include = "tutina" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["aiomysql"], version = "^2.0.32"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
