[project]
name = "tutina-lib"
version = "0.1.0"
description = "Common libraries for the tutina project"
authors = [
  { name = "Jaakko Moisio", email = "jaakko@moisio.fi" }
]
readme = "README.md"

[project.scripts]
tutina = "tutina.lib._cli:app"

[tool.poetry]
packages = [{ include = "tutina" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["aiomysql"], version = "^2.0.32"}
pyjwt = "^2.10.1"
aiohttp = "^3.11.11"
orjson = "^3.10.13"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
xdg-base-dirs = "^6.0.2"
rich = "^13.9.4"
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
